cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_175.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_type.c:65: error: DEAD_STORE
  The value written to &result (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/a_type.c:65:5: Write of unused value
63.   int ASN1_TYPE_cmp(const ASN1_TYPE *a, const ASN1_TYPE *b)
64.   {
65.       int result = -1;
          ^
66.   
67.       if (!a || !b || a->type != b->type)
